--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("components/paragraphe.css");
 @import url("components/buttons.css");
 @import url("components/cadre-circle.css");
-
+@import url("components/banner.css");
 
 h1{
 	color:#FF2676;
